<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaPrincipal.WebMenuConfig.PantallaMenuPizzas"
    android:fitsSystemWindows="true">

    <!-- Menú de abajo -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="@color/colorTextFinal"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btnHome"
            android:scaleType="fitCenter"
            android:src="@drawable/casa" />

        <ImageButton
            android:id="@+id/btnCarrito"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btnCarrito"
            android:scaleType="fitCenter"
            android:src="@drawable/carrito" />

        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btnPerfil"
            android:scaleType="fitCenter"
            android:src="@drawable/perfil" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnUltimaPizza"
        android:layout_width="376dp"
        android:layout_height="130dp"
        android:background="@color/colorTextFinal"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        app:srcCompat="@drawable/iconoultimapizza" />

    <ImageButton
        android:id="@+id/btnPizzasGenerales"
        android:layout_width="376dp"
        android:layout_height="130dp"
        android:background="@color/colorTextFinal"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415"
        app:srcCompat="@drawable/simbolopizza" />

    <ImageButton
        android:id="@+id/btnPizzaPersonalizada"
        android:layout_width="376dp"
        android:layout_height="130dp"
        android:background="@color/colorTextFinal"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739"
        app:srcCompat="@drawable/pizzapersonalizar" />

</androidx.constraintlayout.widget.ConstraintLayout>