<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaPrincipal.WebMenuConfig.GeneralPersonalizadaUltima.UltimaPizza"
    android:fitsSystemWindows="true">

    <!-- Menú de abajo -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="@color/colorTextFinal"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btnHome"
            android:scaleType="fitCenter"
            android:src="@drawable/casa" />

        <ImageButton
            android:id="@+id/btnCarrito"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btnCarrito"
            android:scaleType="fitCenter"
            android:src="@drawable/carrito" />

        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btnPerfil"
            android:scaleType="fitCenter"
            android:src="@drawable/perfil" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInfoPizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="#20808080"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloUltima"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvNombrePizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre de la Pizza"
            android:textColor="@color/texto_dinamico"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIngredientesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Ingredientes:"
            android:textColor="@color/texto_dinamico"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvIngredientesPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingrediente 1, Ingrediente 2..."
            android:textColor="@color/texto_dinamico"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPrecioPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:text="0.00 €"
            android:textColor="@color/texto_dinamico"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSinDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aún no has pedido ninguna pizza"
        android:textColor="@color/texto_dinamico"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>