<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".Pizzas">

    <!-- Menú de abajo -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="@color/colorTextFinal"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btnHome"
            android:scaleType="fitCenter"
            android:src="@drawable/casa" />

        <ImageButton
            android:id="@+id/btnCarrito"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btnCarrito"
            android:scaleType="fitCenter"
            android:src="@drawable/carrito" />

        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/btnPerfil"
            android:scaleType="fitCenter"
            android:src="@drawable/perfil" />
    </LinearLayout>

    <!--Menú Scrolleable-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Contenedor de todas las pizzas-->
        <LinearLayout
            android:id="@+id/contenedorPizzas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- CardView es cada "tarjeta" de cada pizza -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <!-- general -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:background="@color/colorTextFinal">

                    <!-- Imagen -->
                    <ImageView
                        android:id="@+id/imagenPizza"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/pizza_carbonara"
                        android:scaleType="centerCrop"
                        android:layout_marginEnd="12dp" />

                    <!-- Nombre + ingredientes -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/txtNombrePizza"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="Pizza Margarita"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/txtIngredientes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="Tomate, mozzarella, albahaca"
                            android:textSize="14sp"
                            android:paddingTop="4dp" />
                    </LinearLayout>

                    <!-- Botones -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginStart="8dp">

                        <ImageButton
                            android:id="@+id/btnRestar"
                            android:textColor="@color/white"
                            android:backgroundTint="@color/colorMenu"
                            android:src="@drawable/icono_restar"
                            android:layout_width="36dp"
                            android:layout_height="36dp"/>

                        <TextView
                            android:id="@+id/txtCantidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="0"
                            android:textSize="18sp"
                            android:padding="8dp" />

                        <ImageButton
                            android:id="@+id/btnSumar"
                            android:textColor="@color/white"
                            android:text="@string/btnSumar"
                            android:backgroundTint="@color/colorMenu"
                            android:layout_width="36dp"
                            android:src="@drawable/icono_sumar"
                            android:layout_height="36dp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>